2007-08-13 Denis Ovsienko

	* kernel_socket.c: normalize rtm_type_str so it can be handled
	  by LOOKUP macro
	* kernel_socket.c: (rtm_read) don't ignore self-generated
	  routing messages, so we can debug them; make use of
	  ZEBRA_ERR_RTNOEXIST; output more details in debug log.
	* kernel_socket.c: (rtmsg_debug) make use of LOOKUP macro
	* kernel_socket.h: let the world know about rtm_type_str[_max]
	* rib.h: 3 more debugging functions and 5 return codes
	* rt_socket.c: (kernel_rtm_ipv4) dump IP prefix and masklen;
	  complain about strange rtm_write() return values
	* zebra_rib.c: (rib_lookup_ipv4_route, rib_dump,
	  rib_lookup_and_dump) --- new functions; more comments;
	  more debug logging

2007-08-10  Emmanuel Vize <emmanuel.vize@6wind.com>

	* rt_netlink.c: (netlink_interface_addr) Use the appropriate field length for the address
          (acknowledge Andy's comment).

2007-08-06  Denis Ovsienko

	* zebra_rib.c: (general) Add extra debug logging for RIB and
	  RIB queue.

2007-08-02  Denis Ovsienko

	* rt_socket.c (kernel_rtm_ipv4): Only call rtm_write when changes
	are intended.  Don't set FIB flag on failed additions (such as
	occur with multiple paths.

2007-06-25 Denis Ovsienko

	* zebra_rib.c: (rib_add_ipv4_multipath) Loop through RIB
	  is using 'same' variable, but RIB_ENTRY_REMOVED check
	  is testing the constant 'rib' variable, fix. Impact
	  unknown at this point.

2007-05-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* zebra_routemap.c: (route_set_src_compile) Use '#ifdef HAVE_IPV6'
	  as needed.
	* zebra_vty.c: (vty_show_ip_route_detail, vty_show_ip_route) Use
	  '#ifdef HAVE_IPV6' as needed.
	  (show_ip_protocol) Move function definition outside of
	  '#ifdef HAVE_IPV6' section.

2007-05-17 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* kernel_socket.c: (ifam_read_mesg) Grab RTA_DST and RTA_GATEWAY
	  addresses from the message (if present, which seems unlikely on
	  current BSD platforms), and show them in the debug messages.