@@ -1,3 +1,8 @@
+2007-08-14 Denis Ovsienko
+
+	* zebra_rib.c: (nexthop_active_update) Added a comment
+          and rewrote nexthop iteration.
+
 2007-08-13 Denis Ovsienko
 
 	* kernel_socket.c: normalize rtm_type_str so it can be handled
